--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.2.5
   firebase_core: ^2.4.1
+  firebase_dynamic_links: ^5.0.11
   firebase_messaging: ^14.2.1
+  firebase_ui_auth: ^1.1.8
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.0.2
