--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,12 @@ dependencies:
   firebase_core: ^2.4.1
   firebase_dynamic_links: ^5.0.11
   firebase_messaging: ^14.2.1
-  firebase_ui_auth: ^1.1.8
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.0.2
+  flutter_native_splash: ^2.2.17
   flutter_riverpod: ^2.1.3
+  google_sign_in: ^5.4.3
   http: ^0.13.5
 
 dev_dependencies:
@@ -56,9 +57,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - .env
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
