--- a/.gitignore
+++ b/.gitignore
@@ -135,4 +135,5 @@ app.*.symbols
 # Other 
 *.env
 /lib/firebase_options.dart
-/lib/android/app/google-services.json
+/android/app/google-services.json
+/android/app/*.json
