--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,15 +29,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^4.3.1
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.2.5
   firebase_core: ^2.4.1
-  firebase_dynamic_links: ^5.0.11
-  firebase_messaging: ^14.2.1
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.0.2
-  flutter_native_splash: ^2.2.17
   flutter_riverpod: ^2.1.3
   google_sign_in: ^5.4.3
   http: ^0.13.5
