--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,9 +17,11 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.0.2
+  flutter_picker: ^2.1.0
   google_sign_in: ^5.4.3
   http: ^0.13.5
   smooth_page_indicator: ^1.0.0+2
+  toggle_switch: ^2.0.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
