--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   sdk: '>=2.18.6 <3.0.0'
 
 dependencies:
+  awesome_notifications: ^0.7.4+1
   cloud_firestore: ^4.3.1
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.2.5
@@ -17,11 +18,13 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.0.2
-  flutter_local_notifications: ^13.0.0
+  flutter_local_notifications: ^14.0.0+1
+  flutter_native_timezone: ^2.0.0
   flutter_picker: ^2.1.0
   google_sign_in: ^5.4.3
   http: ^0.13.5
   intl: ^0.17.0
+  onesignal_flutter: ^3.5.1
   smooth_page_indicator: ^1.0.0+2
   toggle_switch: ^2.0.1
 
